my second commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="strt">
         <p class="st">All Thinks Are Possible If You believe</p>
         <p class="st2"><small>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form,<br> by injected humour, or randomised words</small></p>
+        <button class="btn">Contact Us</button>
         </div>
     </header>
     <main></main>
