my furth commit

--- a/index.html
+++ b/index.html
@@ -11,10 +11,36 @@
         <div class="strt">
         <p class="st">All Thinks Are Possible If You believe</p>
         <p class="st2"><small>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form,<br> by injected humour, or randomised words</small></p>
-        <button class="btn">Contact Us</button>
+        <button class="btn">Contact us</button>
         </div>
+        
+      
     </header>
-    <main></main>
+    <main>
+        <div class="person">
+           <div class="pic"><img src="images/person.png" alt=""> </div>
+           <div class="p1"> <p ><b>My failures of previous year</b>
+            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,<br> making it over 2000 years old. Richard McClintock.</small></p>
+            <ol>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief.</li>
+                <li>Contrary to popular , is not simply.</li>
+<li>Contrary to popular belief, is not simply.</li>
+<li>Contrary to popular simply.</li>
+            </ol>
+           </div>
+            </div>
+            <div>
+                <h1 style="text-align: center;">MY PLANS</h1>
+                <div class="web">
+                    <img src="images/icons/ecom.png" alt="">
+                    <img src="images/icons/js.png" alt="">
+                    <img src="images/icons/web.png" alt="">
+                    <img src="images/icons/smoke.png" alt="">
+                </div>
+            </div>
+
+    </main>
     <footer></footer>
 </body>
 </html>
